--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
+attrs==21.4.0
 coverage==6.3.3
 cycler==0.11.0
--e git+git@github.com:lubro-crypto/python_intermediate_inflammation.git@52791f51101ca60c3f4970e40c44fd67ead49e0e#egg=inflammation_analysis
+fonttools==4.33.3
+iniconfig==1.1.1
+kiwisolver==1.4.2
 matplotlib==3.5.2
 numpy==1.22.3
 packaging==21.3
+Pillow==9.1.0
+pluggy==1.0.0
 py==1.11.0
 pyparsing==3.0.9
 pytest==7.1.2
 pytest-cov==3.0.0
 python-dateutil==2.8.2
+PyYAML==6.0
+six==1.16.0
+tomli==2.0.1
