--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
+attr==0.3.1
 attrs==21.4.0
 coverage==6.3.3
 cycler==0.11.0
 fonttools==4.33.3
+-e git+ssh://git@github.com/lubro-crypto/python_intermediate_inflammation.git@dbbfae3026688a499f0073c69548b3db91138ed9#egg=inflammation_analysis
 iniconfig==1.1.1
 kiwisolver==1.4.2
 matplotlib==3.5.2
 numpy==1.22.3
 packaging==21.3
 Pillow==9.1.0
+pkg_resources==0.0.0
 pluggy==1.0.0
 py==1.11.0
 pyparsing==3.0.9
@@ -17,3 +20,4 @@ python-dateutil==2.8.2
 PyYAML==6.0
 six==1.16.0
 tomli==2.0.1
+typing_extensions==4.2.0
